--- a/tools/temp-mail/index.html
+++ b/tools/temp-mail/index.html
@@ -1,1 +1,352 @@
-html code here
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Free temporary mail generator : generate temporary mail address Without Login • Tool Sphere</title>
+  </title>
+  <meta name="description" content="Welcome to Tool-Sphere, the premier destination for all your temporary email needs. Say goodbye to tedious registrations and hello to instant disposable email addresses. With Tool-Sphere, enjoy hassle-free access to temporary emails, no login required!
+Unlock a world of possibilities with our custom domain support, giving you the flexibility to choose from a variety of domains for your temporary email address. Stay anonymous and protect your privacy while navigating the digital landscape with ease.
+Experience unparalleled convenience and security with Tool-Sphere. Our encrypted temporary email addresses ensure your sensitive information remains confidential, while our intuitive interface keeps you organized and in control.
+Whether you're a savvy online shopper, a digital enthusiast, or a privacy-conscious individual, Tool-Sphere is your trusted companion in the digital realm. Join thousands of satisfied users and discover the power of temporary email done right, only at Tool-Sphere.">
+  <meta name="keywords" content="">
+  <link href="https://tool-sphere.github.io/css/landing-style.css" rel="stylesheet" type="text/css" />
+  <link href="https://tool-sphere.github.io/css/badge.css" rel="stylesheet" type="text/css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="manifest" href="/icons/site.webmanifest">
+  <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/icons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/icons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="canonical" href="https://tool-sphere.github.io/" />
+  <style>
+    * {
+      cursor: default;
+    }
+
+    .loading {
+      height: 50px;
+      display: flex;
+      align-items: center;
+      margin: 0 auto;
+    }
+
+    .obj {
+      width: 6px;
+      height: 0px;
+      margin: 0 3px;
+      border-radius: 10px;
+      animation: loading 1.4s infinite;
+    }
+
+    .obj:nth-child(2) {
+      animation-delay: 0.15s;
+    }
+
+    .obj:nth-child(3) {
+      animation-delay: 0.3s;
+    }
+
+    .obj:nth-child(4) {
+      animation-delay: 0.45s;
+    }
+
+    .obj:nth-child(5) {
+      animation-delay: 0.6s;
+    }
+
+    .obj:nth-child(6) {
+      animation-delay: 0.75s;
+    }
+
+    .obj:nth-child(7) {
+      animation-delay: 0.9s;
+    }
+
+    .obj:nth-child(8) {
+      animation-delay: 1.05s;
+    }
+
+    @keyframes loading {
+      0% {
+        height: 0;
+        background-color: #ff0080;
+        /*pink*/
+      }
+
+      50% {
+        height: 50px;
+        background-color: #02f006;
+        /*green*/
+      }
+
+      100% {
+        height: 0;
+        background-color: cyan;
+        /*cyan*/
+      }
+    }
+
+    .inbox {
+      width: 90%;
+      height: auto;
+      border: 1px solid gray;
+      border-radius: 10px;
+      min-height: 100px;
+      margin: 10px auto;
+      align-items: center;
+      text-align: center;
+      padding: 10px;
+    }
+
+    #custombtn {
+      margin-top: 10px;
+      width: 70%;
+      height: 3em;
+      background-color: transparent;
+      color: black;
+      font-size: 2em;
+      border-radius: 12px;
+      border: 1px gold solid;
+      margin-bottom: 18px;
+      box-shadow: 0px 0px 10px 1px #FFFA17,
+        inset 0px 0px 40px 4px #D6FF17;
+      color: white;
+      cursor: pointer;
+    }
+
+    .inboxMail {
+      width: 95%;
+      min-height: 20px;
+      background-color: #252525;
+      margin: 10px auto;
+      border: 1px solid white;
+      border-radius: 5px;
+      border: 1.5px solid cyan;
+      border-radius: 10px;
+      cursor: crosshair;
+      box-shadow: inset 0px 10px 200px 0px darkcyan;
+    }
+    .mailTime {
+      cursor: context-menu;
+    }
+    .mailTitle {
+     font-size: 30px; color: white; cursor: zoom-in; 
+    }
+    .sendBy {
+      color: yellowgreen; cursor: grab;
+    }
+    .refreshBtn {
+    height: 30px;
+    border: 0.5px solid white;
+    border-radius: 10px;
+    font-size: 30px;
+    background-color: transparent;
+    color: white;
+    box-shadow: 0 0 10px 1px white;
+    }
+    .perEmail {
+position: fixed;
+  padding: 0;
+  margin: 0;
+  background-color: #f1f1f1;
+  border: 1px solid #ddd;
+  z-index: 999;
+  display: none;
+  width: 90%;
+  height: 85%;
+  color: black;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 12px;
+  overflow-y: auto;
+    }
+    .inboxMsgClosebutton {
+      top: 5px;
+      margin-right: 5px;
+      float: right;
+      font-size: 35px;
+      position: sticky;
+    }
+        .perEmail div {
+          width: 93%;
+          height: 90%;
+          margin: 10px;
+          margin-top: 10%;
+          align-items: center;
+          text-align: center;
+        }
+        .customEmailDiv { 
+          position: fixed;
+          padding: 0;
+          margin: 0;
+          background-color: rgba(69, 192, 245, 0.9);
+          z-index: 995;
+          display: none;
+          width: 100%;
+          height: 100%;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          overflow: hidden;
+        }
+        .customEmailDiv div {
+          position: fixed;
+          padding: 0;
+          margin: 0;
+          background-color: #393939;
+          border: 1px solid #ddd;
+          z-index: 999;
+          display: block;
+          width: 90%;
+          height: 75%;
+          color: black;
+          top: 50%;
+          left: 50%;
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          border-radius: 12px;
+          padding: 10px;
+          box-shadow: 0 0 123px 1px cyan;
+          align-items: center;
+          text-align: center;
+          color: white;
+        }
+        button {
+          -webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+        }
+  </style>
+</head>
+
+<body>
+  <div class="perEmail">
+  <span class='inboxMsgClosebutton' title="close inbox">X</span>
+  <div>
+    <span id="emailInfoSentBy">sent by: sende.email@some.zyx</span> <br> <br>
+    <span id="emailInfoDate">897695</span>
+    <h1 id="emailInfoTitle">Title</h1>
+    <hr>
+    <div id='emailInfoBody'>
+    </div>
+  </div>
+  </div>
+  <div class="nav">
+    <input type="checkbox" id="nav-check">
+    <div class="nav-header">
+      <img src="https://tool-sphere.github.io/icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
+      <div class="nav-title">
+        Tool Sphere
+      </div>
+    </div>
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+
+    <div class="nav-links">
+      <a href="/">🏠 • Home</a>
+      <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
+      <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+      <a href="/tools/email-sender">📨 • Email Sender </a>
+      <a href="/privacy-policy">🔏 • Privacy Policy </a>
+      <a href="/about-us">🔖 • About Us </a>
+      <a href="/contact-us">☎️ • Contact Us </a>
+    </div>
+  </div>
+
+  <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
+    <h1>Temporary Mail Address Generator free : generate unlimited temporary email address instantly free Without Login</h1>
+  </div>
+  <span style="text-align: center; align-items: center; font-size: 4em;"><span class="green-badge" style="margin-left: 10px;">New</span><span class="yellow-badge" style="margin-left: 10px;">EMAIL</span><br><span class="pink-badge" style="margin-left: 10px;">Free</span></span>
+
+  <div class="line"></div>
+  <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
+    <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Generated Email Address: </span>
+    <input value="hiy" maxlength="50" placeholder="your generated email address will show here" id="prmpt" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none; word-break: break-all; cursor: copy;"></input>
+    <br>
+
+    <button id="copyBtn" style="margin-bottom: 1em; border: 1px solid cyan; border-radius: 20px; background-color: transparent; box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white; padding: 8px; cursor: grab;">COPY EMAIL ADDRESS</button>
+
+    <button id="genbtn" style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 1.5em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
+    box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white; cursor: pointer;">
+      GENERATE ANOTHER TEMP EMAIL
+    </button>
+
+    <button id="custombtn">
+      Use Custom Email
+    </button>
+  </div>
+  <div class="customEmailDiv">
+    <span title="close" style="float: right; margin-top: 10px; font-size: 40px; margin-right: 10px;"onclick="document.querySelector('.customEmailDiv').style.display = 'none'">X</span>
+    <div>
+    <label style="font-size: 60px;" for="name">name: </label> <br> 
+    <input placeholder='Put a custom name here without @' type="text" id="name" style="width: 80%; height: 10%; background-color: #252525; border: 1px solid white; border-radius: 14px; color: white; padding: 10px;" /> <br> <br>
+    <label style="font-size: 60px;" for="domain">@ domain</label>
+    <br>
+    <select style="width: 80%; height: 10%; background-color: #252525; border: 1px solid white; border-radius: 14px; color: white; padding: 10px;" name="domain" id="domain">
+      <option value="vjuum.com">vjuum.com</option>   
+      <option value="laafd.com">laafd.com</option>
+      <option value="txcct.com">txcct.com</option>
+    </select>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <button style="width: 80%; height: 10%; background-color: transparent; box-shadow: inset 0 0 30px 1px yellow; border: 1px solid gray; border-radius: 16px; color: white; font-size: 40px;" id="setCDomain">Done</button>
+    </div>
+  </div>
+  <span style="display: block; font-size: 3em; color: white; margin-left: 10px; margin-top: 1em; margin-bottom: 7px;"> Inbox: <span style="font-size: 16px;" id="refreshTimer">Auto Refresh In ${x} sec.</span></span>
+  <div id="gcode" style="margin-top: 10px; margin: 2.5% 2.5%; width: 95%; border: 1px solid orange; border-radius: 4px; display: flex;">
+    <span id="bang" style="display: block; font-size: 22px; color: orange; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Note: if you close the window you can't recive the mail <br> *Inbox will automatically refresh in every 10 seconds</span> <br>
+
+  </div>
+  <div class="inbox">
+    <div class="inboxMail">
+  </div>
+  
+<div class="perEmail">
+</div>
+  </div>
+  <h2>Our temporary email service allows you to generate disposable email addresses without the need for any registration or login. You can create temporary email addresses in a variety of domains and use them for various purposes such as signing up for websites, receiving verification emails, or protecting your privacy while communicating online. With our service, you can easily manage your temporary email addresses and messages, ensuring your online activities remain secure and private.</h2>
+
+  <!--- FAQ --->
+
+  <div class="line"></div>
+  <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How does Tool-Sphere revolutionize temporary email services?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Tool-Sphere redefines temporary email services by offering seamless generation of disposable email addresses without any login requirements. It simplifies the process of creating temporary emails, ensuring user privacy and convenience. With Tool-Sphere, users can easily manage their temporary email needs, enhancing their online privacy and security.</span>
+  <br>
+  <div class="line"></div> <br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What sets Tool-Sphere apart in the realm of temporary email services?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Tool-Sphere distinguishes itself by offering a seamless experience for creating disposable email addresses, without any login requirements. It stands out for its user-friendly approach, ensuring privacy and convenience. With Tool-Sphere, users can effortlessly manage their temporary email needs, enhancing their online security and peace of mind.</span><br>
+  <div class="line"></div> <br>
+<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is Tool-Sphere's temporary email service free to use?</strong></span> <br>
+<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely, Tool-Sphere's temporary email service is completely free for all users. We believe in providing accessible solutions to enhance online privacy and security without any financial barriers. Enjoy the convenience and protection of temporary email addresses at no cost.</span><br>
+  <div class="line"></div> <br>
+
+  <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
+    <p>&copy; 2024 tool-sphere. All rights reserved.</p>
+    <a href="/privacy-policy" style="color: #fff;">Privacy Policy</a> <br><br>
+    <a href="/about-us" style="color: #fff;">About Us</a> <br><br>
+    <a href="/contact-us" style="color: #fff;">Contact Us</a> <br><br>
+  </footer>
+  <div id="cookie-consent">
+    <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
+    <button id="accept-cookies" style="cursor: pointor;">Accept</button>
+  </div>
+  
+  <script type="module" src="./index.js"></script>
+</body>
+</html>
