--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -96,8 +96,8 @@
   
   <div class="nav-links">
     <a href="/">🏠 • Home</a>
-    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
-    <!---<a href="/tools/translator">💬 • Text Translator </a>--->
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a><a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+      <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
     <a href="/tools/email-sender">📨 • Email Sender </a>
     <a href="/privacy-policy">🔏 • Privacy Policy </a>
     <a href="/about-us">🔖 • About Us </a>
