--- a/tools/temp-mail/index.html
+++ b/tools/temp-mail/index.html
@@ -274,7 +274,7 @@ position: fixed;
   <div class="line"></div>
   <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
     <span style="font-size: 1em; color: white; margin-left: 4px; margin-top: 14px;">Generated Email Address: </span>
-    <input maxlength="50" placeholder="your generated email address will show here" id="prmpt" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none; word-break: break-all; cursor: copy;"></input>
+    <input autocomplete="off" maxlength="50" placeholder="your generated email address will show here" id="prmpt" style="margin-top: 4px; width: 90%; height: 50px; background-color: transparent; color: white; border: 1px solid gray; border-radius: 10px; padding: 8px; outline: none; word-break: break-all; cursor: copy;"></input>
     <br>
 
     <button id="copyBtn" style="margin-bottom: 1em; border: 1px solid cyan; border-radius: 20px; background-color: transparent; box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white; padding: 8px; cursor: grab;">COPY EMAIL ADDRESS</button>
