--- a/tools/temp-mail/index.html
+++ b/tools/temp-mail/index.html
@@ -363,6 +363,6 @@ if (localStorage.getItem('cookieConsentAccepted')) {
 } catch (e) {console.log(e);}
     
   </script>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./index.js" defer></script>
 </body>
 </html>
