--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -20,7 +20,7 @@
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="https://tool-sphere.github.io/" />
-<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>
+<!---<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>--->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.3/ace.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
 <style>
@@ -74,7 +74,7 @@
 }
   }
 </style>
-  <script type='text/javascript' src='//pl22229512.toprevenuegate.com/7a/25/b8/7a25b8f7f637f7e331f04eb59840ff3d.js'></script>
+ <!--- <script type='text/javascript' src='//pl22229512.toprevenuegate.com/7a/25/b8/7a25b8f7f637f7e331f04eb59840ff3d.js'></script>--->
 </head>
 
 <body>
@@ -226,8 +226,8 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   cookieConsent.style.display = 'none';
   }
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
-     crossorigin="anonymous"></script>
+  <!---<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>--->
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
