--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
-<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>
+<!---<script src="https://alwingulla.com/88/tag.min.js" data-zone="57675" async data-cfasync="false"></script>--->
 </head>
 
 <body>
@@ -92,8 +92,8 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   cookieConsent.style.display = 'none';
     }
   </script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
-     crossorigin="anonymous"></script>
+<!---  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2813905187470909"
+     crossorigin="anonymous"></script>--->
 </body>
 </html>
 
