--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Qr Code Generator Online For free</title>
+  <title></title>
   </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <link href="https://tool-sphere.github.io/css/landing-style.css" rel="stylesheet" type="text/css" />
   <link href="https://tool-sphere.github.io/css/badge.css" rel="stylesheet" type="text/css" />
-
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
@@ -82,6 +81,13 @@
         /*green*/
       }
 
+      100% {
+        height: 0;
+        background-color: cyan;
+        /*cyan*/
+      }
+    }
+
         button {
           -webkit-tap-highlight-color: transparent;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -135,9 +141,9 @@
     <div class="nav-links">
       <a href="/">🏠 • Home</a>
       <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
-      <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
-            <a href="/tools/qr-code-gen">🔳 • Qr Code Gen </a>
-      <a href="/tools/email-sender">📨 • Email Sender </a>
+      <a href="/tools/temp-mail/">📧 • Temp Mail Gen </a>
+            <a href="/tools/qr-code-generator/">🔳 • Qr Code Gen </a>
+      <a href="/tools/email-sender/">📨 • Email Sender </a>
       <a href="/privacy-policy">🔏 • Privacy Policy </a>
       <a href="/about-us">🔖 • About Us </a>
       <a href="/contact-us">☎️ • Contact Us </a>
@@ -180,12 +186,6 @@
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
   <br>
-  <!---<div class="line"></div> <br>
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What sets Tool-Sphere apart in the realm of temporary email services?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Tool-Sphere distinguishes itself by offering a seamless experience for creating disposable email addresses, without any login requirements. It stands out for its user-friendly approach, ensuring privacy and convenience. With Tool-Sphere, users can effortlessly manage their temporary email needs, enhancing their online security and peace of mind.</span><br>
-  <div class="line"></div> <br>
-<span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is Tool-Sphere's temporary email service free to use?</strong></span> <br>
-<span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely, Tool-Sphere's temporary email service is completely free for all users. We believe in providing accessible solutions to enhance online privacy and security without any financial barriers. Enjoy the convenience and protection of temporary email addresses at no cost.</span><br>--->
   <div class="line"></div> <br>
 
   <footer id="footer" style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
@@ -216,7 +216,5 @@ if (localStorage.getItem('cookieConsentAccepted')) {
   </script>
   <script type="module" src="./index.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-
-
 </body>
-    </html>
+</html>
