--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title></title>
+  <title>qr code generator online free tool</title>
   </title>
-  <meta name="description" content="">
+  <meta name="description" content="Tool-Sphere's cutting-edge QR Code Generator empowers users to easily create personalized QR codes for URLs, text, contact information, and more. Customize your QR codes with a variety of colors, styles, and design options to optimize visibility and enhance branding. Experience the convenience of generating QR codes for free on Tool-Sphere's intuitive and efficient platform. Unlock efficient information sharing and boost your digital presence with Tool-Sphere's premier QR Code Generator tool!">
   <meta name="keywords" content="">
   <link href="https://tool-sphere.github.io/css/landing-style.css" rel="stylesheet" type="text/css" />
   <link href="https://tool-sphere.github.io/css/badge.css" rel="stylesheet" type="text/css" />
@@ -111,17 +111,6 @@
 </head>
 
 <body>
-  <div class="perEmail">
-  <span class='inboxMsgClosebutton' title="close inbox">X</span>
-  <div>
-    <span id="emailInfoSentBy">sent by: sende.email@some.zyx</span> <br> <br>
-    <span id="emailInfoDate">897695</span>
-    <h1 id="emailInfoTitle">Title</h1>
-    <hr>
-    <div id='emailInfoBody'>
-    </div>
-  </div>
-  </div>
   <div class="nav">
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
@@ -179,7 +168,7 @@
     <span class="obj"></span>
   </div>
   </div>
-  <h2>Small Description</h2>
+  <h2>“Tool-Sphere's QR Code Generator is your go-to solution for creating dynamic QR codes tailored to your needs. Encode URLs, text, contact details, and more into sleek, customizable QR designs. Explore a range of color options and styles to enhance visibility and brand consistency. Start generating QR codes for free on Tool-Sphere's user-friendly platform and streamline your information sharing today!”</h2>
   <!--- FAQ --->
   <div class="line"></div>
   <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
