--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -172,6 +172,46 @@
   <!--- FAQ --->
   <div class="line"></div>
   <span style="text-align: center; font-size: 2em;"> Frequently Asked Question And Answer</span> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What is a QR code?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: A QR code (Quick Response code) is a type of matrix barcode that can be scanned using a smartphone camera to quickly access information, such as URLs, text, contact details, and more.</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: What can I use QR codes for?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: QR codes have various applications, including directing users to websites, sharing contact information, enabling easy WiFi access, making payments, promoting events, displaying menus, and more.</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How does a QR code generator work?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: A QR code generator allows you to input specific information (URLs, text, contact info, etc.) and converts it into a QR code image. This image can then be shared and scanned by others using QR code scanning apps.</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <br>
+  <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
   <br>
