--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -185,15 +185,15 @@
   <br>
   <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our QR code generator tool on Tool-Sphere is completely free to use. You can generate custom QR codes without any cost.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I customize the appearance of my QR codes?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our tool allows you to customize QR code colors, add logos or icons, and choose from different design options to match your branding or personal preferences.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Are there any limitations to the types of information I can encode in a QR code?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our QR code generator supports various types of information, including URLs, text, phone numbers, WiFi credentials, vCards, event details, and more. However, the amount of data that can be encoded may vary depending on the type of QR code and scanner used.</span>
   <br>
   <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
