--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -184,7 +184,7 @@
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: A QR code generator allows you to input specific information (URLs, text, contact info, etc.) and converts it into a QR code image. This image can then be shared and scanned by others using QR code scanning apps.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is your QR code generator free to use?</strong></span> <br>
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Yes, our QR code generator tool on Tool-Sphere is completely free to use. You can generate custom QR codes without any cost.</span>
   <br>
   <div class="line"></div> <br>
