--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -196,12 +196,12 @@
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our QR code generator supports various types of information, including URLs, text, phone numbers, WiFi credentials, vCards, event details, and more. However, the amount of data that can be encoded may vary depending on the type of QR code and scanner used.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Do I need to create an account or login to use the QR code generator?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, our QR code generator on Tool-Sphere does not require any account creation or login. You can access and use the tool instantly without any signup process. Simply visit our website, generate your QR code, and download it hassle-free, all without the need for logging in or providing any personal information.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Can I use the QR code generator without encountering ads, and is there a limit on how many QR codes I can create?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! Our QR code generator on Tool-Sphere is completely ad-free and allows for unlimited use, free forever. You can generate as many QR codes as you need without any interruptions or restrictions. Enjoy a seamless and hassle-free experience creating custom QR codes for your various needs.</span>
   <br>
   <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
