--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -204,8 +204,8 @@
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Absolutely! Our QR code generator on Tool-Sphere is completely ad-free and allows for unlimited use, free forever. You can generate as many QR codes as you need without any interruptions or restrictions. Enjoy a seamless and hassle-free experience creating custom QR codes for your various needs.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Is my QR code data and usage tracked in any way?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, we prioritize your privacy and do not track any of your QR code data or usage. Your generated QR codes and associated information are completely private and secure. Rest assured that your usage of our QR code generator tool remains anonymous and confidential.</span>
   <br>
   <div class="line"></div> <br>
   <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
