--- a/tools/qr-code-generator/index.html
+++ b/tools/qr-code-generator/index.html
@@ -208,12 +208,12 @@
   <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: No, we prioritize your privacy and do not track any of your QR code data or usage. Your generated QR codes and associated information are completely private and secure. Rest assured that your usage of our QR code generator tool remains anonymous and confidential.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: How can I create QR codes without signing up or logging in?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: Our QR code generator on Tool-Sphere offers a seamless experience without the need for any account creation or login. You can generate QR codes instantly, free of charge, and without any mandatory sign-up process. Enjoy hassle-free QR code creation directly from our website.</span>
   <br>
   <div class="line"></div> <br>
-  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: one</strong></span> <br>
-  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: one</span>
+  <span style="font-size: 20px; margin-left: 8px; margin-top: 5px;"><strong>Question: Does your QR code generator collect or store my data?</strong></span> <br>
+  <span style="font-size: 20px; margin-top: 4px; margin-left: 8px; margin-bottom: 18px;">Answer: We prioritize user privacy and do not collect or store any data related to your QR code generation activities. Your information remains confidential and secure. Feel confident using our QR code generator knowing that your data is not tracked or stored in any way.</span>
   <br>
   <div class="line"></div> <br>
 
