--- a/tools/temp-mail/index.html
+++ b/tools/temp-mail/index.html
@@ -259,6 +259,7 @@ position: fixed;
       <a href="/">🏠 • Home</a>
       <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
       <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+      <a href="/tools/qr-code-generator/">🔳 • Qr Code Gen </a>
       <a href="/tools/email-sender">📨 • Email Sender </a>
       <a href="/privacy-policy">🔏 • Privacy Policy </a>
       <a href="/about-us">🔖 • About Us </a>
