--- a/tools/code-generator-ai/index.html
+++ b/tools/code-generator-ai/index.html
@@ -96,7 +96,7 @@
   
   <div class="nav-links">
     <a href="/">🏠 • Home</a>
-    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a><a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
+    <a href="/tools/code-generator-ai">👨🏻‍💻 • AI Code Generator </a>
     <a href="/tools/temp-mail">📧 • Temp Mail Gen </a>
     <a href="/tools/qr-code-generator/">🔳 • Qr Code Gen </a>
     <a href="/tools/email-sender">📨 • Email Sender </a>
